package com.mygdx.game;

public abstract class Weapon {

    public Weapon() {

    }

    public void attack() {

    }


}
